--- a/game/css/levels.css
+++ b/game/css/levels.css
@@ -247,11 +247,17 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    height: 100%;
     text-align: center;
+    position: relative;
+    z-index: 10;
 }
 
 .big-icon {
     font-size: 4rem;
     margin-bottom: 20px;
+    margin-bottom: 20px;
     color: #00f3ff;
+    position: relative;
+    z-index: 11;
 }
